# gxen

./: CMakeLists.txt  README.md
assets/suzanne/: suzanne.mtl
libs/filesystem/: filesystem.hpp
libs/glad/: glad.c
libs/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
shaders/: blend.frag  blend.vert  blinnPhong.glsl  camera.glsl  cameraUBO.glsl  cube.frag  cube.frag.glsl  cube.vert.glsl  depth.vert  directionalLight.frag.glsl  directionalLight.vert.glsl  flashLight.frag.glsl  gamma.frag  grayscale.frag  instanced.vert  inverse.frag  light.frag  light.frag.glsl  light.vert  light.vert.glsl  material.glsl  model.frag  model.frag.glsl  model.vert  model.vert.glsl  model_lit.frag  model_unlit.frag  normalMap.glsl  object.frag  object.vert  parallaxMap.glsl  phong.glsl  plane.frag  plane.vert  pointLight.frag.glsl  quad.vert  shadowMapping.glsl  skybox.frag  skybox.vert
shaders/common/: TBN.glsl  blinnPhong.glsl  constants.glsl  material.glsl  normalMap.glsl
shaders/debug/: normal.frag  normal.geom  normal.vert  wireframe.geom  wireframe.vert
shaders/deferred/: gbuffer.frag  gbuffer.vert  lighting.frag
shaders/depth/: depth.vert  depthCubemap.frag  depthCubemap.geom  depthCubemap.vert
shaders/models/: blend.frag  blend.vert  cube.frag  cube.vert  light.frag  light.vert  plane.frag  plane.vert  quad.frag  quad.vert
shaders/post-processing/: blur.glsl  edgeDetect.glsl  fxaa.frag  gamma.frag  grayscale.frag  inverse.frag  kernel.frag  sepia.frag  sharpen.glsl  toneMapping.frag
shaders/post-processing/bloom/: blur.frag  brightFilter.frag  combine.frag
shaders/ub/: shadow.glsl
src/: Camera.cpp  Camera.h  Configs.hpp  Engine.cpp  Engine.h  Gui.cpp  Input.cpp  Input.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SDLWindow.cpp  SDLWindow.h  SdlWindow.cpp  SdlWindow.h  Shader.cpp  Shader.h  Texture.cpp  Window.hpp  camera.cpp  camera.h  configs.hpp  engine.cpp  engine.h  gui.cpp  input.cpp  input.h  main.cpp  mesh.cpp  model.cpp  model.h  sdlWindow.cpp  shader.cpp  texture.cpp
src/ECS/: component.hpp  entity.hpp  registry.cpp  registry.h  system.hpp
src/ECS/components/: bv.hpp  debug.hpp  directionalLight.hpp  instance.hpp  material.hpp  materialComponent.hpp  mesh.hpp  model.hpp  pointLight.hpp  shader.hpp  skybox.hpp  spotLight.hpp  transform.hpp
src/config/: config.hpp
src/core/: IWindow.hpp  camera.cpp  camera.h  engine.cpp  engine.h  gui.cpp  gui.h  guiSystem.cpp  guiSystem.h  input.cpp  input.h  mesh.cpp  mesh.h  model.cpp  model.h  sdlWindow.h  texture.cpp  texture.h  window.cpp  window.h
src/core/gui/: guiBackend.cpp  guiBackend.h  guiPanels.cpp  guiPanels.h  guiSystem.cpp  guiSystem.h
src/entity/: entity.hpp
src/io/: filesystem.hpp
src/light/: light.cpp  light.h
src/math/: boundingVolume.cpp  boundingVolume.h  frustum.hpp  lerp.hpp  matrix.hpp  matrixUtils.hpp  random.hpp  utils.hpp
src/mesh/: mesh.cpp  mesh.h
src/model/: mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp
src/models/: cube.cpp  cube.h  cubemap.cpp  cubemap.h  plane.cpp  plane.h  quad.cpp  quad.h  window.cpp  window.h
src/renderer/: IWindow.hpp  debugRenderer.cpp  forwardRenderer.cpp  forwardRenderer.h  frameBuffer.cpp  frameBuffer.h  gui.cpp  gui.h  lightSystem.cpp  lightSystem.h  postProcess.cpp  postProcess.h  renderSystem.cpp  renderSystem.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skyboxSystem.cpp  skyboxSystem.h  uniformBuffer.cpp  uniformBuffer.h  window.cpp  window.h
src/rendering/: instanceGroup.hpp  lightSystem.cpp  lightSystem.h  material.hpp  postProcess.cpp  postProcess.h  renderCommon.cpp  renderCommon.h  renderFlags.hpp  renderGroup.hpp  renderItem.hpp  renderPipeline.cpp  renderPipeline.h  shader.cpp  shader.h  skyboxSystem.cpp  skyboxSystem.h
src/rendering/buffers/: frameBuffer.cpp  frameBuffer.h  uniformBuffer.cpp  uniformBuffer.h
src/rendering/material/: material.hpp
src/resourceManager/: resourceManager.cpp  resourceManager.h  texture.cpp  texture.h
src/scene/: scene.cpp  scene.h
(+108 files in other folders)
